removing unused jar args